Added documentation about JVM memory compression